update: style scroll-bar, chat-tab-item

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,20 @@
   --card-rgb: 180, 185, 188;
   --card-border-rgb: 131, 134, 135;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track { 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6b7280; 
+  border-radius: 10px;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
